[project]
name = "regime-finder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.31.0",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "psycopg2>=2.9.11",
    "scikit-learn>=1.8.0",
    "sqlalchemy>=2.0.48",
]
